--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">PRABESH</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,14 +26,14 @@
                   SERVICES
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">LEARN</a></li>
+                  <li><a class="dropdown-item" href="/services">LEARN</a></li>
                    <li><a class="dropdown-item" href="#">CODE</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">BUILD</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#"> CONTACT  </a>
+                <a class="nav-link" href="/contact"> CONTACT  </a>
               </li>
             </ul>
             <form class="d-flex" role="search">
