--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %} HOME {% endblock title %}
 
 {% block body %}
-THIS IS A BODY 
+THIS IS A BODY and this is using the base html to display the content
 {% endblock body %}
 
 
