--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}ABOUT{% endblock title %}
+{% block title %}ABOUT and added this just for some cheat{% endblock title %}
 
 {% block body %}
 
