--- a/mysite/templates/services.html
+++ b/mysite/templates/services.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}SERVICES{% endblock title %}
+{% block title %}SERVICES hyhyhyh {% endblock title %}
 
 {% block body %}
 
