--- a/mysite/templates/contact.html
+++ b/mysite/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}CONTACT{% endblock title %}
+{% block title %}CONTACT hhyhyhyh{% endblock title %}
 
 {% block body %}
 
